--- a/estilo/style.css
+++ b/estilo/style.css
@@ -18,6 +18,7 @@
 
 .w50 {
     width: 50%;
+    padding: 0 10px;
 }
 
 .left {
@@ -30,6 +31,11 @@
 
 .clear {
     clear: both;
+}
+
+img {
+    width: 100%;
+    max-width: 200px;
 }
 
 /* Estilização do Site*/
@@ -67,4 +73,199 @@ nav.desktop li {
 nav.desktop a {
     color: white;
     text-decoration: none;
+}
+
+section.banner-principal {
+    width: 100%;
+    height: 600px;
+    background-image: url('../images/bg-banner.jpg');
+    background-size: cover;
+    position: relative;
+}
+
+div.overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(51,51,51,0.7);
+}
+
+section.banner-principal form {
+    width: 93%;
+    max-width: 500px;
+    z-index: 2;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+section.banner-principal form h2 {
+    color: white;
+    font-weight: 300;
+    font-size: 30px;
+    text-align: center;
+}
+
+section.banner-principal form input[type=email] {
+    margin-top: 10px;
+    width: 100%;
+    height: 44px;
+    background: white;
+    color: #333;
+    font-size: 22px;
+    padding-left: 10px;
+}
+
+section.banner-principal form input[type=submit] {
+    margin-top: 10px;
+    width: 100%;
+    height: 44px;
+    background: #00C59E;
+    color: white;
+    cursor: pointer;
+    font-size: 22px;
+    border: 0;
+}
+
+section.descricao-autor {
+    padding: 40px 0;
+}
+
+section.descricao-autor h2 {
+    font-size: 28px;
+    font-weight: 300;
+    color: #444;
+}
+
+section.descricao-autor p {
+    font-size: 10px;
+    color: #444;
+    margin-top: 10px;
+    text-align: justify;
+}
+
+section.especialidades {
+    padding: 20px 0;
+    background: #E2E2E2;
+}
+
+section.especialidades h2.title {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+    color: #999;
+}
+
+section.especialidades div.box-especialidade {
+    padding: 0 30px;
+    margin: 20px 0;
+    text-align: center;
+}
+
+section.especialidades div.box-especialidade h3 {
+    color: #404580;
+    font-size: 30px;
+}
+
+section.especialidades div.box-especialidade h4 {
+    font-weight: 300;
+    font-size: 25px;
+    color: #999;
+}
+
+section.especialidades div.box-especialidade p {
+    color: #444;
+    font-size: 15px;
+    margin-top: 10px;
+}
+
+section.extras {
+    padding: 30px 0;
+    background: #404580;
+}
+
+.depoimentos-container, .servicos-container {
+    padding: 0 2%;
+}
+
+section.extras h2.title {
+    color: white;
+    font-weight: 300;
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+
+section.extras div.depoimento-single {
+    padding: 15px 0;
+    border-bottom: 1px solid #5056AB;
+}
+
+@media screen and (max-width: 638px) {
+    nav.desktop {
+        display: none;
+    }
+
+    nav.mobile {
+        display: block;
+    }
+
+    .btn-menu-mobile {
+        font-size: 24px;
+        cursor: pointer;
+        color: white;
+    }
+
+    nav.mobile ul {
+        top: 55px;
+        z-index: 3;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        display: none;
+        text-align: center;
+    }
+
+    nav.mobile li {
+        font-weight: 300;
+        width: 100%;
+        display: block;
+        background: white;
+        border-bottom: 1px solid #ccc;
+        font-size: 17px;
+        padding: 8px 0;
+    }
+
+    nav.mobile li a {
+        display: block;
+        color: #444;
+        text-decoration: none;
+    }
+}
+
+@media screen and (max-width: 668px) {
+    img {
+        float: none !important;
+        display: block;
+        margin: 0 auto;
+    }
+
+    .w50 {
+        padding: 20px;
+        width: 100%;
+    }
+
+    .w33 {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .box-especialidade {
+        margin: 0;
+        padding: 40px 20px;
+    }
 }
