--- a/estilo/style.css
+++ b/estilo/style.css
@@ -190,7 +190,7 @@ section.extras {
 }
 
 .depoimentos-container, .servicos-container {
-    padding: 0 2%;
+    padding: 0 50px;
 }
 
 section.extras h2.title {
@@ -205,7 +205,67 @@ section.extras div.depoimento-single {
     border-bottom: 1px solid #5056AB;
 }
 
-@media screen and (max-width: 638px) {
+div.depoimento-single p.descricao {
+    font-size: 15px;
+    color: white;
+    font-weight: 300;
+}
+
+div.depoimento-single p.autor {
+    font-size: 15px;
+    color: white;
+    margin-top: 5px;
+    font-weight: bold;
+}
+
+div.servicos-container ul {
+    margin: 20px 0;
+    list-style-position: outside;
+}
+
+div.servicos-container li {
+    margin-bottom: 15px;
+    font-size: 15px;
+    color: white;
+    font-weight: 300;
+}
+
+footer {
+    background: #313462;
+    padding: 30px 0;
+}
+
+footer p {
+    color: white;
+    text-align: center;
+    font-weight: 400;
+    font-size: 15px;
+}
+
+@media screen and (max-width: 668px) {
+    img {
+        float: none !important;
+        display: block;
+        margin: 0 auto;
+    }
+
+    .w50 {
+        padding: 20px;
+        width: 100%;
+    }
+
+    .w33 {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .box-especialidade {
+        margin: 0;
+        padding: 40px 20px;
+    }
+}
+
+@media screen and (max-width: 600px) {
     nav.desktop {
         display: none;
     }
@@ -244,28 +304,5 @@ section.extras div.depoimento-single {
         display: block;
         color: #444;
         text-decoration: none;
-    }
-}
-
-@media screen and (max-width: 668px) {
-    img {
-        float: none !important;
-        display: block;
-        margin: 0 auto;
-    }
-
-    .w50 {
-        padding: 20px;
-        width: 100%;
-    }
-
-    .w33 {
-        width: 100%;
-        padding: 20px;
-    }
-
-    .box-especialidade {
-        margin: 0;
-        padding: 40px 20px;
     }
 }
