--- a/estilo/style.css
+++ b/estilo/style.css
@@ -52,6 +52,11 @@ header .logo {
     color: white;
 }
 
+header .logo a {
+    color: white;
+    text-decoration: none;
+}
+
 .mobile {
     display: none;
 }
@@ -75,6 +80,7 @@ nav.desktop a {
     text-decoration: none;
 }
 
+/*Seção Banner e Form*/
 section.banner-principal {
     width: 100%;
     height: 600px;
@@ -132,6 +138,7 @@ section.banner-principal form input[type=submit] {
     border: 0;
 }
 
+/*Seção Descrição do Autor*/
 section.descricao-autor {
     padding: 40px 0;
 }
@@ -149,6 +156,7 @@ section.descricao-autor p {
     text-align: justify;
 }
 
+/*Seção Especialidades*/
 section.especialidades {
     padding: 20px 0;
     background: #E2E2E2;
@@ -184,6 +192,8 @@ section.especialidades div.box-especialidade p {
     margin-top: 10px;
 }
 
+/*Seção Extras
+Depoimentos*/
 section.extras {
     padding: 30px 0;
     background: #404580;
@@ -218,6 +228,7 @@ div.depoimento-single p.autor {
     font-weight: bold;
 }
 
+/*Serviços*/
 div.servicos-container ul {
     margin: 20px 0;
     list-style-position: outside;
@@ -230,6 +241,7 @@ div.servicos-container li {
     font-weight: 300;
 }
 
+/*Footer*/
 footer {
     background: #313462;
     padding: 30px 0;
